--- a/eMotive.Repository/eMotive.Repository.csproj
+++ b/eMotive.Repository/eMotive.Repository.csproj
@@ -36,7 +36,7 @@
       <HintPath>..\packages\Dapper-Async.1.03\lib\net45\Dapper.dll</HintPath>
     </Reference>
     <Reference Include="Extensions">
-      <HintPath>..\eMotive.Search\bin\Debug\Extensions.dll</HintPath>
+      <HintPath>..\..\..\Dropbox\CommonUtilities\Extensions\bin\Release\Extensions.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="MySql.Data, Version=6.8.3.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
