--- a/eMotive.Models/eMotive.Models.csproj
+++ b/eMotive.Models/eMotive.Models.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Objects\Pages\Page.cs" />
     <Compile Include="Objects\Pages\PageSearch.cs" />
     <Compile Include="Objects\Pages\PartialPage.cs" />
+    <Compile Include="Objects\Reports\Users\InterviewerReportItem.cs" />
     <Compile Include="Objects\Reports\Users\SCEReportItem.cs" />
     <Compile Include="Objects\Roles\Role.cs" />
     <Compile Include="Objects\Search\BasicSearch.cs" />
