Reworking session logic to simplify it and move out presentation logic from Manager to view. Also started replacing all [WebService] functionality with ServiceStack services.

--- a/eMotive.Models/eMotive.Models.csproj
+++ b/eMotive.Models/eMotive.Models.csproj
@@ -97,6 +97,7 @@
     <Compile Include="Objects\SignupsMod\UserSignup.cs" />
     <Compile Include="Objects\SignupsMod\UserSignupProjection.cs" />
     <Compile Include="Objects\SignupsMod\UserSignupView.cs" />
+    <Compile Include="Objects\SignupsMod\UserSlotView.cs" />
     <Compile Include="Objects\Signups\AdminSignupView.cs" />
     <Compile Include="Objects\Signups\Group.cs" />
     <Compile Include="Objects\Signups\SCETrainingInformation.cs" />
