--- a/eMotive.Site/eMotive.MMI.csproj
+++ b/eMotive.Site/eMotive.MMI.csproj
@@ -1188,6 +1188,7 @@
     <Content Include="Scripts\version.json" />
     <Content Include="Views\Test\SignalRTest.cshtml" />
     <Content Include="Views\Sessions\Signups.cshtml" />
+    <Content Include="Views\Sessions\Slots.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="AngularJs\Modules\" />
