--- a/eMotive.Models/eMotive.Models.csproj
+++ b/eMotive.Models/eMotive.Models.csproj
@@ -95,6 +95,7 @@
     <Compile Include="Objects\SignupsMod\SessionAttendance.cs" />
     <Compile Include="Objects\SignupsMod\Signup.cs" />
     <Compile Include="Objects\SignupsMod\Slot.cs" />
+    <Compile Include="Objects\SignupsMod\SignupSearch.cs" />
     <Compile Include="Objects\SignupsMod\UserSignup.cs" />
     <Compile Include="Objects\SignupsMod\UserSignupProjection.cs" />
     <Compile Include="Objects\SignupsMod\UserSignupView.cs" />
