Started to fix session edit angular page. Sorted out session details page (might need some fleshing out.)

--- a/eMotive.Site/Web.config
+++ b/eMotive.Site/Web.config
@@ -71,7 +71,7 @@
       </buildProviders>
     </compilation>
     <httpHandlers>
-      <add path="services" type="ServiceStack.WebHost.Endpoints.ServiceStackHttpHandlerFactory,ServiceStack" verb="*" />
+      <add path="api" type="ServiceStack.WebHost.Endpoints.ServiceStackHttpHandlerFactory,ServiceStack" verb="*" />
     </httpHandlers>
     <authentication mode="None">
       <forms loginUrl="~/Account/Login" timeout="20" />
@@ -113,7 +113,7 @@
     <validation validateIntegratedModeConfiguration="false" />
     <handlers>
       <remove name="Elmah" />
-      <add path="services" name="ServiceStack.Factory" type="ServiceStack.WebHost.Endpoints.ServiceStackHttpHandlerFactory,ServiceStack" verb="*" preCondition="integratedMode" resourceType="Unspecified" allowPathInfo="true" />
+      <add path="api" name="ServiceStack.Factory" type="ServiceStack.WebHost.Endpoints.ServiceStackHttpHandlerFactory,ServiceStack" verb="*" preCondition="integratedMode" resourceType="Unspecified" allowPathInfo="true" />
 
       <!-- <add name="Elmah" verb="POST,GET,HEAD" path="elmah.axd" type="Elmah.ErrorLogPageFactory, Elmah" />-->
       
