Started creating settings section.

--- a/eMotive.Services/eMotive.Services.csproj
+++ b/eMotive.Services/eMotive.Services.csproj
@@ -47,8 +47,31 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\MySql.Data.6.8.3\lib\net45\MySql.Data.dll</HintPath>
     </Reference>
-    <Reference Include="Ninject">
-      <HintPath>..\packages\Ninject.3.0.1.10\lib\net45-full\Ninject.dll</HintPath>
+    <Reference Include="ServiceStack, Version=3.9.71.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\ServiceStack.3.9.71\lib\net35\ServiceStack.dll</HintPath>
+    </Reference>
+    <Reference Include="ServiceStack.Common">
+      <HintPath>..\packages\ServiceStack.Common.3.9.11\lib\net35\ServiceStack.Common.dll</HintPath>
+    </Reference>
+    <Reference Include="ServiceStack.Interfaces">
+      <HintPath>..\packages\ServiceStack.Common.3.9.11\lib\net35\ServiceStack.Interfaces.dll</HintPath>
+    </Reference>
+    <Reference Include="ServiceStack.OrmLite">
+      <HintPath>..\packages\ServiceStack.OrmLite.SqlServer.3.9.14\lib\ServiceStack.OrmLite.dll</HintPath>
+    </Reference>
+    <Reference Include="ServiceStack.OrmLite.SqlServer">
+      <HintPath>..\packages\ServiceStack.OrmLite.SqlServer.3.9.14\lib\ServiceStack.OrmLite.SqlServer.dll</HintPath>
+    </Reference>
+    <Reference Include="ServiceStack.Redis">
+      <HintPath>..\packages\ServiceStack.Redis.3.9.11\lib\net35\ServiceStack.Redis.dll</HintPath>
+    </Reference>
+    <Reference Include="ServiceStack.ServiceInterface, Version=3.9.71.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\ServiceStack.3.9.71\lib\net35\ServiceStack.ServiceInterface.dll</HintPath>
+    </Reference>
+    <Reference Include="ServiceStack.Text">
+      <HintPath>..\packages\ServiceStack.Text.4.0.31\lib\net40\ServiceStack.Text.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
@@ -59,6 +82,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AutoMapperServicesConfiguration.cs" />
+    <Compile Include="eMotiveConfigurationServiceWebConfig - Copy.cs" />
     <Compile Include="Enums.cs" />
     <Compile Include="Interfaces\EmailAttachment.cs" />
     <Compile Include="Interfaces\IEmailService.cs" />
@@ -74,7 +98,7 @@
     <Compile Include="Objects\EmailLog.cs" />
     <Compile Include="Objects\EmailSearchDocument.cs" />
     <Compile Include="Objects\EmailService.cs" />
-    <Compile Include="eMotiveConfigurationServiceWebConfig.cs" />
+    <Compile Include="eMotiveConfigurationServiceMySQL.cs" />
     <Compile Include="Objects\Message.cs" />
     <Compile Include="NotificationService.cs" />
     <Compile Include="Objects\ReportService.cs" />
