Making changes to new settings, added form and sql code + validation.
All appears to be working correctly.

--- a/eMotive.Services/eMotive.Services.csproj
+++ b/eMotive.Services/eMotive.Services.csproj
@@ -103,6 +103,7 @@
     <Compile Include="NotificationService.cs" />
     <Compile Include="Objects\ReportService.cs" />
     <Compile Include="Objects\Settings\Settings.cs" />
+    <Compile Include="Objects\Validation\LoginValidator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
