--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -6,6 +6,7 @@
   <repository path="..\eMotive.Managers\packages.config" />
   <repository path="..\eMotive.Models\packages.config" />
   <repository path="..\eMotive.Ninject\packages.config" />
+  <repository path="..\eMotive.Reports\packages.config" />
   <repository path="..\eMotive.Repository\packages.config" />
   <repository path="..\eMotive.Search\packages.config" />
   <repository path="..\eMotive.Services\packages.config" />
